--- a/login.html
+++ b/login.html
@@ -28,7 +28,7 @@
 </div>
 
 <script>
-const API_URL = "http://localhost:3001/api";
+const API_URL = "https://saigangahotelmanagement-some-changes.onrender.com/api";
 
 async function login() {
   const username = document.getElementById("username").value.trim();
