--- a/dashboard.html
+++ b/dashboard.html
@@ -90,29 +90,31 @@
         />
       </div>
     </div>
+
     <!-- INLINE FOOD PICKER (hidden by default) -->
-<div id="inlineFoodPicker" style="display:none; margin:15px 0; padding:15px; border:2px solid #3498db; border-radius:10px; background:#f0f8ff;">
-  <div style="display:flex; justify-content:space-between; align-items:center; gap:10px; flex-wrap:wrap;">
-    <div>
-      <h3 style="margin:0;">🍽️ Add Food to Booking: <span id="inlineFoodBookingId"></span></h3>
-      <small style="color:#7f8c8d;">Use + / − to set quantity. Then click Close.</small>
+    <div id="inlineFoodPicker"
+      style="display:none; margin:15px 0; padding:15px; border:2px solid #3498db; border-radius:10px; background:#f0f8ff;">
+      <div style="display:flex; justify-content:space-between; align-items:center; gap:10px; flex-wrap:wrap;">
+        <div>
+          <h3 style="margin:0;">🍽️ Add Food to Booking: <span id="inlineFoodBookingId"></span></h3>
+          <small style="color:#7f8c8d;">Use + / − to set quantity. Then click Close.</small>
+        </div>
+        <button class="btn btn-danger" onclick="closeInlineFood()">✖ Close</button>
+      </div>
+
+      <div style="margin-top:12px;">
+        <input id="inlineFoodSearch" placeholder="🔍 Search food..."
+          style="padding:10px;border-radius:6px;border:1px solid #ddd;width:260px;max-width:100%;"
+          onkeyup="renderInlineFoodMenu()"
+        />
+      </div>
+
+      <div id="inlineFoodMenu" style="margin-top:12px;"></div>
     </div>
-    <button class="btn btn-danger" onclick="closeInlineFood()">✖ Close</button>
-  </div>
 
-  <div style="margin-top:12px;">
-    <input id="inlineFoodSearch" placeholder="🔍 Search food..."
-      style="padding:10px;border-radius:6px;border:1px solid #ddd;width:260px;max-width:100%;"
-      onkeyup="renderInlineFoodMenu()"
-    />
-  </div>
-
-  <div id="inlineFoodMenu" style="margin-top:12px;"></div>
-</div>
-
-
-    <div style="overflow-x:auto;">
-      <table>
+    <!-- ✅ Use table-wrap class for proper scrolling + aligned columns -->
+    <div class="table-wrap">
+      <table id="userFoodCartMainTable">
         <thead>
           <tr>
             <th>Booking ID</th>
@@ -123,10 +125,11 @@
             <th>Actions</th>
           </tr>
         </thead>
-        <tbody id="userFoodCartTable" style="overflow-x: hidden;">
-          <tr>
-           <td colspan="6" style="text-align:center;color:#7f8c8d;">No carts yet</td>
 
+        <!-- ✅ Remove overflow-x hidden from tbody -->
+        <tbody id="userFoodCartTable">
+          <tr>
+            <td colspan="6" style="text-align:center;color:#7f8c8d;">No carts yet</td>
           </tr>
         </tbody>
       </table>
@@ -137,6 +140,7 @@
     </div>
   </div>
 </div>
+
 
 
             <!-- Dashboard Section -->
